--- a/service/src/test/resources/application.conf
+++ b/service/src/test/resources/application.conf
@@ -1,18 +1,20 @@
-portal {
-  holder {
-    userEmail = "user@email.com"
-    userPassword = "password"
-  }
-  service {
-    walletApiUrl = "http://localhost:7001"
-    issuerApiUrl = "http://localhost:7002"
-    verifierApiUrl = "http://localhost:7003"
-    demoWalletUrl = "http://localhost:7101"
-  }
-  database {
-    jdbcUrl = "jdbc:postgresql://localhost:30543/waltid"
-    username = "postgres"
-    password = "postgres"
-    driverClassName = "org.postgresql.Driver"
-  }
+
+holder {
+  userEmail = "user@email.com"
+  userPassword = "password"
+}
+
+service {
+  walletApiUrl = "http://localhost:7001"
+  issuerApiUrl = "http://localhost:7002"
+  verifierApiUrl = "http://localhost:7003"
+  demoWalletUrl = "http://localhost:7101"
+  devWalletUrl = "http://localhost:7104"
+}
+
+database {
+  jdbcUrl = "jdbc:postgresql://localhost:30543/waltid"
+  username = "postgres"
+  password = "postgres"
+  driverClassName = "org.postgresql.Driver"
 }
