--- a/portal/src/main/resources/application.conf
+++ b/portal/src/main/resources/application.conf
@@ -1,23 +1,26 @@
-portal {
-  server {
-    host = "0.0.0.0"
-    port = 9090
-    baseUrl = "https://proxy.nessus-tech.io:8443"
-  }
-  holder {
-    userEmail = "user@email.com"
-    userPassword = "password"
-  }
-  service {
-    walletApiUrl = "http://localhost:7001"
-    issuerApiUrl = "http://localhost:7002"
-    verifierApiUrl = "http://localhost:7003"
-    demoWalletUrl = "http://localhost:7101"
-  }
-  database {
-    jdbcUrl = "jdbc:postgresql://localhost:30543/waltid"
-    username = "postgres"
-    password = "postgres"
-    driverClassName = "org.postgresql.Driver"
-  }
+
+server {
+  host = "0.0.0.0"
+  port = 9090
+  baseUrl = "https://proxy.nessus-tech.io:8443"
+}
+
+holder {
+  userEmail = "user@email.com"
+  userPassword = "password"
+}
+
+service {
+  walletApiUrl = "http://localhost:7001"
+  issuerApiUrl = "http://localhost:7002"
+  verifierApiUrl = "http://localhost:7003"
+  demoWalletUrl = "http://localhost:7101"
+  devWalletUrl = "http://localhost:7104"
+}
+
+database {
+  jdbcUrl = "jdbc:postgresql://localhost:30543/waltid"
+  username = "postgres"
+  password = "postgres"
+  driverClassName = "org.postgresql.Driver"
 }
