[#179] issuer: Issue an in-time credential

--- a/portal/src/main/resources/application.conf
+++ b/portal/src/main/resources/application.conf
@@ -5,7 +5,7 @@ server {
   baseUrl = "https://proxy.nessus-tech.io:8443"
 }
 
-holder {
+wallet {
   userEmail = "user@email.com"
   userPassword = "password"
 }
@@ -19,8 +19,7 @@ service {
 }
 
 database {
-  jdbcUrl = "jdbc:postgresql://localhost:30543/waltid"
-  username = "postgres"
-  password = "postgres"
-  driverClassName = "org.postgresql.Driver"
+  jdbcUrl = "jdbc:postgresql://localhost:5432/waltid"
+  username = "waltid"
+  password = "waltid"
 }
