[#184] verifier: Valid Credential in a Presentation

--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>waltid-wallet-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>id.walt.credentials</groupId>
+            <artifactId>waltid-w3c-credentials-jvm</artifactId>
+        </dependency>
+        <dependency>
             <groupId>id.walt.openid4vc</groupId>
             <artifactId>waltid-openid4vc-jvm</artifactId>
         </dependency>
