[#192] Automate EBSI Conformance tests using Selenium

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <version.logback>1.5.18</version.logback>
         <version.nimbus>10.0.1</version.nimbus>
         <version.postgresql>42.7.5</version.postgresql>
+        <version.selenium>4.33.0</version.selenium>
         <version.slf4j>2.0.6</version.slf4j>
         <version.typesafe.config>1.4.3</version.typesafe.config>
         <version.waltid>0.14.0</version.waltid>
@@ -257,6 +258,11 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${version.postgresql}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>${version.selenium}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
