--- a/service/src/test/resources/application.conf
+++ b/service/src/test/resources/application.conf
@@ -1,5 +1,11 @@
 
-holder {
+server {
+  host = "0.0.0.0"
+  port = 9090
+  baseUrl = "https://proxy.nessus-tech.io:8443"
+}
+
+wallet {
   userEmail = "user@email.com"
   userPassword = "password"
 }
@@ -13,8 +19,7 @@ service {
 }
 
 database {
-  jdbcUrl = "jdbc:postgresql://localhost:30543/waltid"
-  username = "postgres"
-  password = "postgres"
-  driverClassName = "org.postgresql.Driver"
+  jdbcUrl = "jdbc:postgresql://localhost:5432/waltid"
+  username = "waltid"
+  password = "waltid"
 }
