--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -102,6 +102,10 @@
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-datetime-jvm</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+        </dependency>
 
         <!-- Runtime -->
         <dependency>
