[#177] holder: receive a pre-authorised credential

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <version.selenium>4.33.0</version.selenium>
         <version.slf4j>2.0.6</version.slf4j>
         <version.typesafe.config>1.4.3</version.typesafe.config>
-        <version.waltid>0.14.0</version.waltid>
+        <version.waltid>1.0.2506031118-SNAPSHOT</version.waltid>
 
         <!--
             [TODO] Remove dependency on local waltid build
