--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,11 @@
             </dependency>
             <dependency>
                 <groupId>io.ktor</groupId>
+                <artifactId>ktor-server-call-logging-jvm</artifactId>
+                <version>${version.ktor}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.ktor</groupId>
                 <artifactId>ktor-server-content-negotiation-jvm</artifactId>
                 <version>${version.ktor}</version>
             </dependency>
