--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -64,6 +64,10 @@
         </dependency>
         <dependency>
             <groupId>io.ktor</groupId>
+            <artifactId>ktor-server-call-logging-jvm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.ktor</groupId>
             <artifactId>ktor-server-core-jvm</artifactId>
         </dependency>
         <dependency>
